twerk the header
Signed-off-by: Nicolas-frnc <174860069+Nicolas-frnc@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,25 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Site V2 musique</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
     <div class="header">
         <header>
-            <h1>Site musique</h1>
+            <h1 class="h1-titre">Site musique</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="index.html">Artistes</a></li>
-                    <li><a href="index.html">Albums</a></li>
+                    <li><a href="albums.html">Albums</a></li>
                     <li><a href="index.html">Contact</a></li>
+                    <li class="test"><a href="index.html">Contact</a></li>
+
                 </ul>
             </nav>
         </header>
 
-        <p>LA musique blabla</p>
+
     </div>
+    <div class="banner-head">
+
+        <section class="image-text-container">
+            <img alt="Concert" class="img-banner" src="/image/concert-3387324_1280.jpg">
+            <div class="text-content">
+                <h3 class="banner-head-title">Concerts</h3>
+                <p class="banner-head-txt">Nos event blabla</p>
+                <button class="banner-head-btn">En savoir plus</button>
+            </div>
+        </section>
 
 
 </body>
