twerk the header + add ico + 3 div in header
Signed-off-by: Nicolas-frnc <174860069+Nicolas-frnc@users.noreply.github.com>

--- a/albums.html
+++ b/albums.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8">
     <title>Site V2 musique</title>
     <link href="css/style-albm.css" rel="stylesheet">
-
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/0568947a4f.js"></script>
 </head>
 <body>
 <div class="header">
     <header>
-        <h1>Site musique</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="index.html">Artistes</a></li>
-                <li><a href="albums.html">Albums</a></li>
-                <li><a href="index.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-menu">
+            <h1>Site musique</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="index.html">Artistes</a></li>
+                    <li><a href="albums.html">Albums</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </nav>
+
+        </div>
+
+        <div class="header-icon">
+            <i class="fa-solid fa-compact-disc fa-lg"></i>
+            <i class="fa-solid fa-cart-shopping fa-lg"></i>
+            <i class="fa-solid fa-bell fa-lg"></i>
+
+
+        </div>
+
     </header>
 
 
 </div>
 <div class="banner-head">
-    <h1>Page de connexion</h1>
 
 
 </body>
