--- a/index.html
+++ b/index.html
@@ -4,38 +4,46 @@
     <meta charset="UTF-8">
     <title>Site V2 musique</title>
     <link href="css/style.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/0568947a4f.js"></script>
 
 </head>
 <body>
-    <div class="header">
-        <header>
-            <h1 class="h1-titre">Site musique</h1>
+<div class="header">
+    <header>
+        <div class="header-menu">
+            <h1>Site musique</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="index.html">Artistes</a></li>
                     <li><a href="albums.html">Albums</a></li>
                     <li><a href="index.html">Contact</a></li>
-                    <li class="test"><a href="index.html">Contact</a></li>
-
                 </ul>
             </nav>
-        </header>
+
+        </div>
+
+        <div class="header-icon">
+            <i class="fa-solid fa-compact-disc fa-lg"></i>
+            <i class="fa-solid fa-cart-shopping fa-lg"></i>
+            <i class="fa-solid fa-bell fa-lg"></i>
+        </div>
+    </header>
 
 
-    </div>
-    <div class="banner-head">
+</div>
+<div class="banner-head">
 
-        <section class="image-text-container">
-            <img alt="Concert" class="img-banner" src="/image/concert-3387324_1280.jpg">
-            <div class="text-content">
-                <h3 class="banner-head-title">Concerts</h3>
-                <p class="banner-head-txt">Nos event blabla</p>
-                <button class="banner-head-btn">En savoir plus</button>
-            </div>
-        </section>
-
-
+    <section class="image-text-container">
+        <img alt="Concert" class="img-banner" src="/image/concert-3387324_1280.jpg">
+        <div class="text-content">
+            <h3 class="banner-head-title">concert exclusif Versailles rive droite</h3>
+            <p class="banner-head-txt">Découvrez un concert exclusif début décembre par certains artistes qui sont
+                présents sur ce site où vous pouvez réserver vos billets en cliquant sur en savoir plus</p>
+            <button class="banner-head-btn">En savoir plus</button>
+        </div>
+    </section>
 </body>
+
 </html>
 
