end card + add flex (to patch)
Signed-off-by: Nicolas-frnc <174860069+Nicolas-frnc@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,74 @@
             <button class="banner-head-btn">En savoir plus</button>
         </div>
     </section>
+</div>
+
+<div class="card">
+    <div class="card-1">
+        <div class="card-1-img">
+            <img src="image/img1.png">
+        </div>
+
+        <div class="cart1-info">
+            <h3>Album 1</h3>
+            <p>Artiste 1</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+    <div class="card-2">
+        <div class="card-2-img">
+            <img src="image/img2.png">
+        </div>
+
+        <div class="cart2-info">
+            <h3>Album 2</h3>
+            <p>Artiste 2</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+    <div class="card-3">
+        <div class="card-3-img">
+            <img src="image/img3.png">
+        </div>
+
+        <div class="cart3-info">
+            <h3>Album 3</h3>
+            <p>Artiste 3</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+    <div class="card-4">
+        <div class="card-4-img">
+            <img src="image/img4.png">
+        </div>
+
+        <div class="cart4-info">
+            <h3>Album 4</h3>
+            <p>Artiste 4</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+
+    <div class="card-5">
+        <div class="card-5-img">
+            <img src="image/img5.png">
+        </div>
+
+        <div class="cart5-info">
+            <h3>Album 5</h3>
+            <p>Artiste 5</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+
+</div>
+
+
 </body>
 
 </html>
