--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </div>
     </section>
 </div>
-
 <div class="card">
     <div class="card-1">
         <div class="card-1-img">
@@ -107,6 +106,43 @@
             <button class="card-btn">En savoir plus</button>
         </div>
     </div>
+    <div class="card-5">
+        <div class="card-5-img">
+            <img src="image/img5.png">
+        </div>
+
+        <div class="cart5-info">
+            <h3>Album 5</h3>
+            <p>Artiste 5</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+    <div class="card-5">
+        <div class="card-5-img">
+            <img src="image/img5.png">
+        </div>
+
+        <div class="cart5-info">
+            <h3>Album 5</h3>
+            <p>Artiste 5</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+    <div class="card-5">
+        <div class="card-5-img">
+            <img src="image/img5.png">
+        </div>
+
+        <div class="cart5-info">
+            <h3>Album 5</h3>
+            <p>Artiste 5</p>
+            <p>2024</p>
+            <button class="card-btn">En savoir plus</button>
+        </div>
+    </div>
+
 
 </div>
 
