--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Site V2 musique</title>
     <link href="css/style.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/0568947a4f.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
